src/test/deca/context/valid/class/calls/this_fields.deca
// Description:
//    Appel d'un champ inexistante
//
// Resultats:
//    aucune erreur

class A {
	int a;
	int getA() {
		return this.a;
	}
	void setA(int a) {
		this.a = a;
	}

}

{
}

