src/test/deca/context/invalid/class/calls/method_instead_of_field.deca
// Description:
//    Appel d'une méthode alors que le nom correspond à un champ
//
// Resultats:
//    is not a field

class A {
	int a;
}

{
	A inst;
	A.a();
}

